--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
     <ul class="menu">
-        <li class="links">HOME</li>
-        <li class="links">VIDEOS</li>
-        <li class="links">WORK</li>
-        <li class="links">WRITINGS</li>
-        <li class="links">CONTACT</li>
+        <li class="links"><a href=#Welcome>HOME</a></li>
+        <li class="links"><a href=#videos>VIDEOS</a></li>
+        <li class="links"><a href=#work>WORK</a></li>
+        <li class="links"><a href=#writing>WRITINGS</a></li>
+        <li class="links"><a href=#contact>CONTACT</a></li>
     </ul>
     <section id="Welcome">
         <div class="Welcomediv">
@@ -56,7 +56,28 @@
             Radcliffe has contributed to many charities, including Demelza Hospice Care for Children and the Trevor
             Project; the latter awarded him its Hero Award in 2011.</p>
     </section>
-
-</body>
-
-</html>
+    <section id="videos">
+        <h1>videos</h1>
+        <div class="line"></div>
+        <iframe width="727" height="409" src="https://www.youtube.com/embed/V3684E6CZ_I"
+            title="Daniel Radcliffe Quizzed On Will Smith's Oscars Slap & Villain Role In New Film, The Lost City | GMB"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        <br>
+        <iframe width="727" height="409" src="https://www.youtube.com/embed/zQZAIhP0H2A"
+            title="Daniel Radcliffe Answers MORE of the Web's Most Searched Questions | WIRED" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+    </section>
+    <section id="work">
+        <h1>work</h1>
+        <div class="line"></div>
+        <iframe width="727" height="800" src="https://en.wikipedia.org/wiki/Daniel_Radcliffe#Career"></iframe>
+    </section>
+    <section id="writing">
+        <h1>Writing</h1>
+        <div class="line"></div>
+        <a href="https://www.empireonline.com/movies/news/daniel-radcliffe-has-written-a-script-about-the-film-industry-that-he-wants-to-direct/" target="_blank">Daniel
+            Radcliffe Has Written A Script About The Film Industry That He Wants To Direct</a> </section> </body>
+            </html>
