--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>Daniel</title>
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&family=Tapestry&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+    <center>
     <ul class="menu">
         <li class="links"><a href=#Welcome>HOME</a></li>
         <li class="links"><a href=#videos>VIDEOS</a></li>
@@ -18,6 +20,7 @@
         <li class="links"><a href=#writing>WRITINGS</a></li>
         <li class="links"><a href=#contact>CONTACT</a></li>
     </ul>
+    </center>
     <section id="Welcome">
         <div class="Welcomediv">
             <img src="1.jpg" class="profile">
@@ -78,6 +81,25 @@
     <section id="writing">
         <h1>Writing</h1>
         <div class="line"></div>
-        <a href="https://www.empireonline.com/movies/news/daniel-radcliffe-has-written-a-script-about-the-film-industry-that-he-wants-to-direct/" target="_blank">Daniel
-            Radcliffe Has Written A Script About The Film Industry That He Wants To Direct</a> </section> </body>
-            </html>
+        <a href="https://www.empireonline.com/movies/news/daniel-radcliffe-has-written-a-script-about-the-film-industry-that-he-wants-to-direct/"
+            target="_blank">Daniel
+            Radcliffe Has Written A Script About The Film Industry That He Wants To Direct</a>
+    </section>
+    <section id="contact">
+        <h1>contact</h1>
+        <div class="line"></div>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d462562.6559715164!2d54.94658915445676!3d25.075758126602246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f43496ad9c645%3A0xbde66e5084295162!2sDubai!5e0!3m2!1sen!2sae!4v1656334064020!5m2!1sen!2sae"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="contact1">
+            <a href="mailto:myra.bharadava2011@icloud.com?subject=hello">
+                <i class="fa fa-envelope"></i>&nbsp;&nbsp;
+                <h3>myra.bharadava2011@icloud.com</h3>
+            </a>
+        </div>
+    </section>
+
+</body>
+
+</html>
